fix: convert Tikz -> TikZ

--- a/presen.tex
+++ b/presen.tex
@@ -102,10 +102,10 @@
 
 % ==============================================================================
 \begin{frame}
-  \frametitle{Tikzの図（手順）}
+  \frametitle{TikZの図（手順）}
 
   \begin{itemize}
-    \item Tikzの図は figure と tikzpicture を使います。
+    \item TikZの図は figure と tikzpicture を使います。
     \item 手順は tikz の graph を使うと良いです。
   \end{itemize}
 
@@ -131,10 +131,10 @@
 
 % ==============================================================================
 \begin{frame}
-  \frametitle{Tikzの図（階層構造）}
+  \frametitle{TikZの図（階層構造）}
 
   \begin{itemize}
-    \item Tikzの図は figure と tikzpicture を使います。
+    \item TikZの図は figure と tikzpicture を使います。
     \item 階層構造は tikz の child を使うと良いです。
   \end{itemize}
 
@@ -170,7 +170,7 @@
 
 % ==============================================================================
 \begin{frame}
-  \frametitle{Tikzで数式の説明}
+  \frametitle{TikZで数式の説明}
 
   \begin{itemize}
     \item 数式の一部分を説明するときには align の中で tikz を使います。
@@ -201,7 +201,7 @@
 
 % ==============================================================================
 \begin{frame}
-  \frametitle{TikzでOverlay}
+  \frametitle{TikZでOverlay}
 
   \begin{itemize}
     \setlength\itemsep{1cm}
@@ -225,7 +225,7 @@
 
 % ==============================================================================
 \begin{frame}
-  \frametitle{Tikzで折れ線グラフ}
+  \frametitle{TikZで折れ線グラフ}
 
   \vspace{1em}
 
@@ -253,7 +253,7 @@
 
 % ==============================================================================
 \begin{frame}
-  \frametitle{Tikzで棒グラフ}
+  \frametitle{TikZで棒グラフ}
 
   \vspace{1em}
 
