fix: add color to bar chart

--- a/presen.tex
+++ b/presen.tex
@@ -267,7 +267,7 @@
         ytick = data,
         xlabel = $S_x$
         ]
-        \addplot[draw=blue] coordinates {
+        \addplot[fill=blue!80] coordinates {
           (10,Foo) (15,Bar) (5,Baz) (24,Qux) (30,Corge)
         };
       \end{axis}
